# audiocore

./: .gitignore  CMakeLists.txt  README.md
include/: audiocore2.h
lib/: README.md
src/: audiocore2.cpp  main.cpp
